--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="header-top">
         <div>
-          <h1 class="site-title">AI Incident Hub</h1>
+          <h1 class="site-title">AI Sycophancy Hub</h1>
           <p class="site-subtitle">
             A factual, curated overview of real-world incidents involving AI systems.
             Search, filter, and explore how AI impacts safety, fairness, and society.
