--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,7 @@
         <div>
           <h1 class="site-title">AI Sycophancy Hub</h1>
           <p class="site-subtitle">
-            A factual, curated overview of real-world incidents involving AI systems.
-            Search, filter, and explore how AI impacts safety, fairness, and society.
+            A curated repository of real-world AI manipulation and sycophancy incidents
           </p>
         </div>
         <nav class="nav">
