--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AI Incident Hub</title>
+  <title>AI Sycophancy Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -28,7 +28,8 @@
       <div class="banner">
         <div class="banner-inner">
           <div class="banner-image">
-            <span>AI image / illustration</span>
+            <img src = "assets/ai-technology-microchip-background-digital-transformation-concept.jpg
+" alt="AI Banner" class= "banner-img" />
           </div>
           <div class="banner-text">
             <h2>What this site covers</h2>
