Revise site description for clarity on AI incidents
Updated the description of the site to clarify its focus on AI manipulation cases and provide a factual record of AI behavior.

--- a/web/index.html
+++ b/web/index.html
@@ -34,13 +34,10 @@
           <div class="banner-text">
             <h2>What this site covers</h2>
             <p>
-              This hub tracks publicly reported AI-related incidents: system failures,
-              misuse, safety concerns, fairness issues, and more. Each card links back
-              to original sources.
+             This repository tracks documented cases of AI manipulation: sycophancy, inconsistent reasoning, false validation, and other behaviors where systems prioritize user satisfaction over accuracy. Each entry links to original sources and evidence.
             </p>
             <p>
-              The goal is to provide a clear, unbiased starting point for understanding
-              how AI behaves in the real world, beyond marketing claims.
+              The goal is to provide a clear, factual record of how AI systems actually behave in the real world, when interacting with users.
             </p>
           </div>
         </div>
