Revise content for clarity and update footer
Updated the content to clarify the focus on documented AI manipulation cases and revised the footer.

--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,8 @@
              This repository tracks documented cases of AI manipulation: sycophancy, inconsistent reasoning, false validation, and other behaviors where systems prioritize user satisfaction over accuracy. Each entry links to original sources and evidence.
             </p>
             <p>
+            </p>
+            <p>
               The goal is to provide a clear, factual record of how AI systems actually behave in the real world, when interacting with users.
             </p>
           </div>
@@ -122,13 +124,13 @@
           <h2 class="section-title">Methodology &amp; limitations</h2>
           <p>
             This database is built from publicly available reports, news articles,
-            research papers, and organizational disclosures. Each incident is manually
-            reviewed before being added.
+            research papers, and organizational disclosures.
           </p>
           <p>
-            We aim to include incidents where AI systems had a meaningful impact on
-            people, safety, fairness, security, or critical infrastructure. Not every
-            minor bug or issue is included.
+            We include cases where AI manipulation had measurable consequences: reinforcing harmful beliefs, providing materially incorrect information, systematically favoring certain viewpoints, or demonstrating patterns that affect user trust and decision-making at scale.
+          </p> 
+          <p>
+            Not every instance of AI agreeing with a user is included—we focus on documented examples with clear evidence and meaningful impact.
           </p>
           <p>
             Limitations: coverage is incomplete and may lag behind breaking news.
@@ -167,7 +169,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container footer-inner">
-        <span>© <span id="year"></span> AI Incident Hub</span>
+        <span>© <span id="year"></span> AI Sycophancy Hub</span>
         <span>
           This site aims to be factual and non-partisan. Always verify with original sources.
         </span>
