--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
             <p>
             </p>
             <p>
-              The goal is to provide a clear, factual record of how AI systems actually behave in the real world, when interacting with users.
+              The goal is to provide factual documentation of AI manipulation as it occurs in real-world interactions with users.
             </p>
           </div>
         </div>
