Revise site heading and description for clarity
Updated the heading and description to reflect the focus on AI manipulation.

--- a/web/index.html
+++ b/web/index.html
@@ -32,9 +32,9 @@
 " alt="AI Banner" class= "banner-img" />
           </div>
           <div class="banner-text">
-            <h2>What this site covers</h2>
+            <h2>AI Manipulation in the Wild: A Living Archive</h2>
             <p>
-             This repository tracks documented cases of AI manipulation: sycophancy, inconsistent reasoning, false validation, and other behaviors where systems prioritize user satisfaction over accuracy. Each entry links to original sources and evidence.
+             AI systems don't just inform—they adapt, flatter, and deceive. This repository documents real-world cases where AI prioritizes user satisfaction over truth: sycophantic agreement, shifting reasoning, and validation of harmful beliefs.
             </p>
             <p>
             </p>
