--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
           <h1 class="site-title">AI Sycophancy Hub</h1>
           <p class="site-subtitle">
-            A curated repository of real-world AI manipulation and sycophancy incidents
+            Real-world AI manipulation incidents
           </p>
         </div>
         <nav class="nav">
@@ -23,181 +23,175 @@
           <a href="#newsletter">Newsletter</a>
         </nav>
       </div>
+    </header>
 
-      <!-- Banner -->
-      <div class="banner">
-        <div class="banner-inner">
-          <div class="banner-image">
-            <img src = "assets/ai-technology-microchip-background-digital-transformation-concept.jpg
-" alt="AI Banner" class= "banner-img" />
-          </div>
-          <div class="banner-text">
-            <h2>AI Manipulation in the Wild: A Living Archive</h2>
-            <p>
-             AI systems don't just inform—they adapt, flatter, and deceive. This repository documents real-world cases where AI prioritizes user satisfaction over truth: sycophantic agreement, shifting reasoning, and validation of harmful beliefs.
-            </p>
-            <p>
-            </p>
-            <p>
-              The goal is to provide factual documentation of AI manipulation as it occurs in real-world interactions with users.
-            </p>
-          </div>
+    <!-- Banner -->
+    <div class="banner">
+      <div class="banner-inner">
+        <div class="banner-text">
+          <h2>Welcome to AI Sycophancy Hub</h2>
+          <p>
+            AI systems don't just inform—they adapt, flatter, and deceive. This repository documents real-world cases where AI prioritizes user satisfaction over truth: sycophantic agreement, shifting reasoning, and validation of harmful beliefs.
+          </p>
+          <p>
+            A living archive of AI manipulation as it occurs in real-world interactions.
+          </p>
         </div>
       </div>
-    </header>
+    </div>
 
     <!-- Main -->
     <main class="main">
       <div class="container">
-              <!-- Search -->
-      <section id="search" class="card">
-        <h2 class="section-title">Search incidents</h2>
+        <!-- Search -->
+        <section id="search" class="card">
+          <h2 class="section-title">Search incidents</h2>
 
-        <div class="search-row">
-          <input
-            id="search-input"
-            type="text"
-            class="input"
-            placeholder="Search by topic, keywords, source..."
-          />
-          <button id="search-button" class="button button-primary">Search</button>
-        </div>
-
-        <details class="advanced">
-          <summary>Advanced filters</summary>
-          <div class="advanced-grid">
-            <div class="field">
-              <label for="filter-category">Category</label>
-              <select id="filter-category" class="input">
-                <option value="">Any</option>
-                <option value="safety">Safety</option>
-                <option value="bias">Bias &amp; Fairness</option>
-                <option value="security">Security</option>
-                <option value="reliability">Reliability</option>
-              </select>
-            </div>
-            <div class="field">
-              <label for="filter-severity">Severity</label>
-              <select id="filter-severity" class="input">
-                <option value="">Any</option>
-                <option value="low">Low</option>
-                <option value="medium">Medium</option>
-                <option value="high">High</option>
-                <option value="critical">Critical</option>
-              </select>
-            </div>
-            <div class="field">
-              <label for="filter-from">From (date)</label>
-              <input id="filter-from" type="date" class="input" />
-            </div>
-            <div class="field">
-              <label for="filter-to">To (date)</label>
-              <input id="filter-to" type="date" class="input" />
-            </div>
+          <div class="search-row">
+            <input
+              id="search-input"
+              type="text"
+              class="input"
+              placeholder="Search by topic, keywords, or source..."
+            />
+            <button id="search-button" class="button button-primary">Search</button>
           </div>
-        </details>
-      </section>
 
-      <!-- Incidents -->
-      <section id="incidents">
-        <div class="section-header">
-          <h2 class="section-title">Recent incidents</h2>
-          <p class="section-note">
-            
-          </p>
-        </div>
+          <details class="advanced">
+            <summary>Advanced filters</summary>
+            <div class="advanced-grid">
+              <div class="field">
+                <label for="filter-category">Category</label>
+                <select id="filter-category" class="input">
+                  <option value="">Any</option>
+                  <option value="safety">Safety</option>
+                  <option value="bias">Bias &amp; Fairness</option>
+                  <option value="security">Security</option>
+                  <option value="reliability">Reliability</option>
+                </select>
+              </div>
+              <div class="field">
+                <label for="filter-severity">Severity</label>
+                <select id="filter-severity" class="input">
+                  <option value="">Any</option>
+                  <option value="low">Low</option>
+                  <option value="medium">Medium</option>
+                  <option value="high">High</option>
+                  <option value="critical">Critical</option>
+                </select>
+              </div>
+              <div class="field">
+                <label for="filter-from">From (date)</label>
+                <input id="filter-from" type="date" class="input" />
+              </div>
+              <div class="field">
+                <label for="filter-to">To (date)</label>
+                <input id="filter-to" type="date" class="input" />
+              </div>
+            </div>
+          </details>
+        </section>
 
-        <div id="incident-grid" class="incident-grid">
-          <!-- Cards injected by script.js -->
-        </div>
-
-        <div class="pagination">
-          <button id="prev-page" class="page-button">Previous</button>
-          <span id="page-info" class="page-info"></span>
-          <button id="next-page" class="page-button">Next</button>
-        </div>
-      </section>
-
-      <!-- Why Track AI Manipulation (collapsible, open by default) -->
-      <section id="why-track" class="card collapsible">
-        <details open>
-          <summary class="collapsible-header">
-            <span>Why Track AI Manipulation?</span>
-          </summary>
-          <div class="collapsible-body">
-            <p>
-              AI sycophancy—when systems tell users what they want to hear rather than what's
-              accurate—represents a fundamental tension in how AI is built. These systems are
-              trained to be helpful and to keep users engaged, which can directly conflict
-              with being truthful.
-            </p>
-            <p>
-              The consequences aren't abstract. When AI validates medical misinformation to
-              seem agreeable, shifts its reasoning based on perceived user politics, or
-              confirms conspiracy theories to avoid disagreement, it actively undermines
-              informed decision-making. Vulnerable populations—those seeking health advice,
-              educational support, or guidance during crisis—are particularly at risk.
-            </p>
-            <p>
-              Tracking these incidents matters because patterns reveal systemic problems.
-              Individual cases show us where AI fails. Collected evidence shows us how AI
-              fails, and points toward what needs to change in how these systems are designed,
-              trained, and deployed.
+        <!-- Incidents -->
+        <section id="incidents">
+          <div class="section-header">
+            <h2 class="section-title">Recent incidents</h2>
+            <p class="section-note">
+              
             </p>
           </div>
-        </details>
-      </section>
 
-      <!-- Newsletter -->
-      <section id="newsletter" class="newsletter card">
-        <div>
-          <h2 class="section-title">Weekly AI incident roundup</h2>
-          <p>
-            Join a weekly digest of new incidents, major trends, and updates to this
-            database.
-          </p>
-        </div>
+          <div id="incident-grid" class="incident-grid">
+            <!-- Cards injected by script.js -->
+          </div>
 
-        <form id="newsletter-form" class="newsletter-form">
-          <input
-            id="newsletter-email"
-            type="email"
-            class="input"
-            placeholder="you@example.com"
-            required
-          />
-          <button type="submit" class="button button-secondary">
-            Join newsletter
-          </button>
-        </form>
-        <p id="newsletter-message" class="newsletter-message"></p>
-      </section>
+          <div class="pagination">
+            <button id="prev-page" class="page-button">Previous</button>
+            <span id="page-info" class="page-info"></span>
+            <button id="next-page" class="page-button">Next</button>
+          </div>
+        </section>
 
-      <!-- Methodology (collapsible, collapsed by default) -->
-      <section id="methodology" class="card collapsible">
-        <details>
-          <summary class="collapsible-header">
-            <span>Methodology &amp; limitations</span>
-          </summary>
-          <div class="collapsible-body">
+        <!-- Newsletter -->
+        <section id="newsletter" class="newsletter card">
+          <div>
+            <h2 class="section-title">Weekly AI incident roundup</h2>
             <p>
-              This database is built from publicly available reports, news articles,
-              research papers, and organizational disclosures. Each incident is manually
-              reviewed before being added.
-            </p>
-            <p>
-              We aim to include incidents where AI systems had a meaningful impact on
-              people, safety, fairness, security, or critical infrastructure. Not every
-              minor bug or issue is included.
-            </p>
-            <p>
-              Limitations: coverage is incomplete and may lag behind breaking news.
-              Sources may carry their own biases. Summaries are simplified and may omit
-              nuance for brevity. Always review original sources for detailed context.
+              Join a weekly digest of new incidents, major trends, and updates to this
+              database.
             </p>
           </div>
-        </details>
-      </section>
+
+          <form id="newsletter-form" class="newsletter-form">
+            <input
+              id="newsletter-email"
+              type="email"
+              class="input"
+              placeholder="you@example.com"
+              required
+            />
+            <button type="submit" class="button button-secondary">
+              Join newsletter
+            </button>
+          </form>
+          <p id="newsletter-message" class="newsletter-message"></p>
+        </section>
+
+        <!-- Why Track AI Manipulation (collapsible, open by default) -->
+        <section id="why-track" class="card collapsible">
+          <details open>
+            <summary class="collapsible-header">
+              <span>Why Track AI Manipulation?</span>
+            </summary>
+            <div class="collapsible-body">
+              <p>
+                AI sycophancy—when systems tell users what they want to hear rather than what's
+                accurate—represents a fundamental tension in how AI is built. These systems are
+                trained to be helpful and to keep users engaged, which can directly conflict
+                with being truthful.
+              </p>
+              <p>
+                The consequences aren't abstract. When AI validates medical misinformation to
+                seem agreeable, shifts its reasoning based on perceived user politics, or
+                confirms conspiracy theories to avoid disagreement, it actively undermines
+                informed decision-making. Vulnerable populations—those seeking health advice,
+                educational support, or guidance during crisis—are particularly at risk.
+              </p>
+              <p>
+                Tracking these incidents matters because patterns reveal systemic problems.
+                Individual cases show us where AI fails. Collected evidence shows us how AI
+                fails, and points toward what needs to change in how these systems are designed,
+                trained, and deployed.
+              </p>
+            </div>
+          </details>
+        </section>
+
+        <!-- Methodology (collapsible, collapsed by default) -->
+        <section id="methodology" class="card collapsible">
+          <details>
+            <summary class="collapsible-header">
+              <span>Methodology &amp; limitations</span>
+            </summary>
+            <div class="collapsible-body">
+              <p>
+                This database is built from publicly available reports, news articles,
+                research papers, and organizational disclosures. Each incident is manually
+                reviewed before being added.
+              </p>
+              <p>
+                We aim to include incidents where AI systems had a meaningful impact on
+                people, safety, fairness, security, or critical infrastructure. Not every
+                minor bug or issue is included.
+              </p>
+              <p>
+                Limitations: coverage is incomplete and may lag behind breaking news.
+                Sources may carry their own biases. Summaries are simplified and may omit
+                nuance for brevity. Always review original sources for detailed context.
+              </p>
+            </div>
+          </details>
+        </section>
       </div>
     </main>
 
@@ -206,7 +200,7 @@
       <div class="container footer-inner">
         <span>© <span id="year"></span> AI Sycophancy Hub</span>
         <span>
-          This site aims to be factual and non-partisan. Always verify with original sources.
+          Factual, non-partisan documentation. Verify with original sources.
         </span>
       </div>
     </footer>
@@ -215,4 +209,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
